# swissmilk_rs

./: Cargo.toml  README.md
.cargo/: config.toml
data/: names.txt
src/: chess_types.rs  main.rs  pairing.rs  player.rs  tournament.rs
swissmilk/: Cargo.toml
swissmilk/src/: berger_table.rs  chess_types.rs  dutch.rs  lib.rs  pairing.rs  pairing_system.rs  player.rs  random.rs  tournament.rs  utils.rs
