[package]
# https://en.wikipedia.org/wiki/Tilsit_cheese
name = "tilsit"
version = "0.1.0"
edition = "2024"
description = "A FIDE compatible (*) pairing engine"
license = "BSD-3-Clause"
repository = "https://github.com/datawater/swissmilk_rs"
readme = "README.md"
keywords = ["fide", "swiss", "chess"]
categories = ["command-line-utilities"]

[dependencies]
swissmilk = { path = "./swissmilk" }