[package]
name = "swissmilk"
version = "0.1.0"
edition = "2024"
description = "A FIDE compatible (*) pairing engine"
license = "BSD-3-Clause"
repository = "https://github.com/datawater/swissmilk_rs"
readme = "README.md"
keywords = ["fide", "swiss", "chess"]
categories = ["command-line-utilities"]


[dependencies]
itertools = "0.14.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rustc-hash = "2.1.1"
smallvec = { version = "1.15.0", features = ["union", "const_generics", "specialization"] }