[package]
name = "swissmilk"
version = "0.1.0"
edition = "2024"
description = "A FIDE compatible (*) pairing engine"
license = "BSD-2-Clause"
repository = "https://github.com/datawater/swissmilk_rs"
readme = "README.md"
keywords = ["fide", "swiss", "chess"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
codegen-backend = "cranelift"
codegen-units = 2048
debug = 1
split-debuginfo = "unpacked"

[dependencies]
itertools = "0.14.0"
smallvec = { version = "1.15.0", features = ["union", "const_generics", "specialization"] }
